--- a/sass-boilerplate/stylesheets/main.scss
+++ b/sass-boilerplate/stylesheets/main.scss
@@ -41,11 +41,11 @@ body{
 }
 
 *{
-  box-sizing: border-box;
+ // box-sizing: border-box;
 }
 
-/*#header {
-  min-height: 550px;
+#header {
+  min-height: 350px;
   position: relative;
 
 &:before {
@@ -54,13 +54,24 @@ body{
   position: absolute;
   z-index: -1;
   width: 100%;
-  min-height: 600px;
+  min-height: 300px;
   background-image: url("images/background/RSwwfau_13397_web.jpg");
   background-repeat: no-repeat;
   background-position: top center;
   background-size:100%;
 }
-}*/
+
+/*  &:after {
+    content: "<h1>h111</h1>";
+    color: white;
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    min-height: 300px;
+  }*/
+
+}
 
 #navbar-container{
   background: url("images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
