--- a/sass-boilerplate/stylesheets/base/_fonts.scss
+++ b/sass-boilerplate/stylesheets/base/_fonts.scss
@@ -6,5 +6,9 @@
 
 @font-face {
   font-family: WfWebfont;
-  src: url(wwf-webfont.ttf);
+  /* Гарнитура шрифта */
+  src: url(base/wwf-webfont.ttf);
+  /* Путь к файлу со шрифтом */
 }
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
