--- a/sass-boilerplate/stylesheets/layout/_header.scss
+++ b/sass-boilerplate/stylesheets/layout/_header.scss
@@ -2,18 +2,80 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 
-/*
+#header {
+  height: 550px;
+  min-height: 450px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
 
-#navbar-container{
-  background: url("../images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
+.header-worldwildlife {
 
-}*/
+  justify-content: flex-end;
 
-#desktop-navbar{
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 550px;
+    min-height: 450px;
+    background-image: url("images/background/RSwwfau_13397_web.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    // background-size:100%;
+  }
+
+}
+
+.header-worldwildlifespecies {
+  justify-content: center;
+
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 550px;
+    min-height: 450px;
+    background-image: url("images/background/Species-Index-Turtle.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    // background-size:100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  #header {
+    height: 50vw;
+  }
+
+  .header-worldwildlife {
+
+    &:before {
+      height: 50vw;
+    }
+
+  }
+}
+
+#navbar-container {
+  background: url("images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+#desktop-navbar {
   padding: 20px 10px 12px;
 }
 
-#mobile-navbar{
+#mobile-navbar {
   display: none;
 }
 
@@ -79,6 +141,7 @@
     right: 10px;
     border: none;
     background: white;
+
     svg {
       width: 15px;
     }
@@ -93,16 +156,16 @@
     text-transform: uppercase;
   }
 
-/*  &:hover {
-    > a {
-      background: white;
-      color: $blue-menu;
-    }
+  /*  &:hover {
+      > a {
+        background: white;
+        color: $blue-menu;
+      }
 
-    .sub-menu {
-      display: flex;
-    }
-  }*/
+      .sub-menu {
+        display: flex;
+      }
+    }*/
 }
 
 .nav-push-right > li {
@@ -116,16 +179,16 @@
     letter-spacing: 2px;
   }
 
- /* &:hover {
-    > a {
-      background: $dark-gray-menu;
-      color: white;
-    }
+  /* &:hover {
+     > a {
+       background: $dark-gray-menu;
+       color: white;
+     }
 
-    .dark-sub-menu {
-      display: flex;
-    }
-  }*/
+     .dark-sub-menu {
+       display: flex;
+     }
+   }*/
 }
 
 .sub-menu {
@@ -207,7 +270,7 @@
   a.nav-link {
     border-radius: 2px;
     @include fonts(13px, 800, white);
-      padding: 10px 20px;
+    padding: 10px 20px;
     text-transform: uppercase;
     line-height: 21px;
 
@@ -216,12 +279,12 @@
   .nav-button-left > a.nav-link {
     background: $dark-orange;
     color: white;
-   // line-height: 35px;
+    // line-height: 35px;
   }
 
   .nav-button-right > a.nav-link {
     background: $light-orange;
-   // line-height: 35px;
+    // line-height: 35px;
   }
 
 }
@@ -253,7 +316,7 @@
   }
 }
 
-@media (min-width: 1000px){
+@media (min-width: 1000px) {
 
   #nav-button > li {
 
@@ -263,7 +326,7 @@
       }
 
       .dark-sub-menu {
-         display: flex;
+        display: flex;
       }
 
     }
@@ -271,44 +334,63 @@
 
   .nav-push-right > li {
 
-     &:hover {
-       > a {
-         background: $dark-gray-menu;
-         color: white;
-       }
+    &:hover {
+      > a {
+        background: $dark-gray-menu;
+        color: white;
+      }
 
-       .dark-sub-menu {
-         display: flex;
-       }
-     }
+      .dark-sub-menu {
+        display: flex;
+      }
+    }
   }
 
   .nav-push-left > li {
 
-      &:hover {
-        > a {
-          background: white;
-          color: $blue-menu;
-        }
-
-        .sub-menu {
-          display: flex;
-        }
+    &:hover {
+      > a {
+        background: white;
+        color: $blue-menu;
       }
+
+      .sub-menu {
+        display: flex;
+      }
+    }
   }
 
 }
 
+.mobile-menu {
+  display: none;
+}
 
+.open-menu {
+  display: block;
+  /*position: absolute;
+  z-index: 1;*/
+}
+
+.mobile-nav-button {
+  display: none;
+}
 
 @media (max-width: 768px) {
+
+  /*  .mobile-nav-button{
+      display: block;
+    }*/
 
   #mobile-navbar {
 
     display: block;
-    // background: white;
+    background: url("images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
     // width: 100%;
     padding: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 2;
 
     .nav-top-mobile {
       background: white;
@@ -358,7 +440,8 @@
     #mobile-search-form {
       padding: 20px;
       position: relative;
-      input{
+
+      input {
         width: 100%;
       }
 
@@ -391,7 +474,9 @@
     display: none;
   }
 
-  #mobile-nav-button {
+  .mobile-nav-button {
+
+    display: block;
 
     #down-nav-button {
 
@@ -424,29 +509,94 @@
 
 }
 
-.mobile-sub-container{
+.mobile-sub-container {
   display: flex;
 
+}
+
+.navbar-container {
+  display: flex;
+  flex-direction: row;
 }
 
 @media (max-width: 1100px) {
   #navbar-subcontainer {
 
+    .mobile-sub-container {
+      flex-direction: column;
 
-   // align-items: flex-start;
-    //flex-direction: column;
+      form {
+        order: 2;
+        padding: 10px 0;
 
-.mobile-sub-container{
-  flex-direction: column;
-}
+        input {
+          width: 100%;
+        }
+      }
 
-    form {
-     // order: 2;
+      #nav-button {
+        display: flex;
+        justify-content: space-between;
+
+        .nav-button-left, .nav-button-right {
+          padding-right: 10px;
+          padding-left: 0px;
+
+          a.nav-link {
+            padding: 5px 20px;
+          }
+        }
+      }
     }
   }
+
+  .navbar-container {
+    flex-direction: column;
+  }
+
 }
 
-.hidden{
+.hidden-nav-button {
   position: absolute;
-  z-index: -1;
+  // z-index: -1;
+  width: 100%;
+  top: 106px;
+}
+
+.header-content {
+  //height: 100%;
+  // position: relative;
+  //z-index: -1;
+
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  //letter-spacing: 2px;
+  padding: 30px 15px;
+
+
+  .hdr h2 {
+    font-size: 52px;
+    padding-bottom: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .hdr-sub h3 {
+    font-size: 18px;
+    padding-bottom: 2px;
+  }
+
+}
+
+@media (max-width: 640px) {
+  .header-content {
+
+    .hdr h2 {
+      font-size: 32px;
+    }
+
+  }
 }
