--- a/sass-boilerplate/stylesheets/main.css
+++ b/sass-boilerplate/stylesheets/main.css
@@ -481,7 +481,9 @@ a:hover, a:active, a:focus {
 
 @font-face {
   font-family: WfWebfont;
-  src: url(wwf-webfont.ttf);
+  /* Гарнитура шрифта */
+  src: url(base/wwf-webfont.ttf);
+  /* Путь к файлу со шрифтом */
 }
 /**
  * Basic typography style for copy text
@@ -550,12 +552,64 @@ body {
   width: 1px;
 }
 
-/*
+#header {
+  height: 550px;
+  min-height: 450px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
 
-#navbar-container{
-  background: url("../images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
+.header-worldwildlife {
+  justify-content: flex-end;
+}
+.header-worldwildlife:before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 550px;
+  min-height: 450px;
+  background-image: url("images/background/RSwwfau_13397_web.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
 
-}*/
+.header-worldwildlifespecies {
+  justify-content: center;
+}
+.header-worldwildlifespecies:before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 550px;
+  min-height: 450px;
+  background-image: url("images/background/Species-Index-Turtle.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+@media (max-width: 1000px) {
+  #header {
+    height: 50vw;
+  }
+
+  .header-worldwildlife:before {
+    height: 50vw;
+  }
+}
+#navbar-container {
+  background: url("images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 #desktop-navbar {
   padding: 20px 10px 12px;
 }
@@ -619,7 +673,7 @@ body {
         background: white;
         color: $blue-menu;
       }
-  
+
       .sub-menu {
         display: flex;
       }
@@ -635,15 +689,15 @@ body {
 
 .nav-push-right > li {
   /* &:hover {
-      > a {
-        background: $dark-gray-menu;
-        color: white;
-      }
-  
-      .dark-sub-menu {
-        display: flex;
-      }
-    }*/
+     > a {
+       background: $dark-gray-menu;
+       color: white;
+     }
+
+     .dark-sub-menu {
+       display: flex;
+     }
+   }*/
 }
 .nav-push-right > li > a {
   font-size: 17px;
@@ -779,10 +833,31 @@ body {
     display: flex;
   }
 }
+.mobile-menu {
+  display: none;
+}
+
+.open-menu {
+  display: block;
+  /*position: absolute;
+  z-index: 1;*/
+}
+
+.mobile-nav-button {
+  display: none;
+}
+
 @media (max-width: 768px) {
+  /*  .mobile-nav-button{
+      display: block;
+    }*/
   #mobile-navbar {
     display: block;
+    background: url("images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
     padding: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 2;
   }
   #mobile-navbar .nav-top-mobile {
     background: white;
@@ -848,14 +923,17 @@ body {
     display: none;
   }
 
-  #mobile-nav-button #down-nav-button {
+  .mobile-nav-button {
+    display: block;
+  }
+  .mobile-nav-button #down-nav-button {
     flex-direction: row;
   }
-  #mobile-nav-button #down-nav-button .nav-button-right, #mobile-nav-button #down-nav-button .nav-button-left {
+  .mobile-nav-button #down-nav-button .nav-button-right, .mobile-nav-button #down-nav-button .nav-button-left {
     padding: 0;
     flex: 50%;
   }
-  #mobile-nav-button #down-nav-button a.nav-link {
+  .mobile-nav-button #down-nav-button a.nav-link {
     border-radius: 0;
     height: 55px;
     display: flex;
@@ -863,7 +941,7 @@ body {
     align-items: center;
     line-height: 21px;
   }
-  #mobile-nav-button #down-nav-button a.nav-link:hover span {
+  .mobile-nav-button #down-nav-button a.nav-link:hover span {
     margin: 0;
     padding: 0;
     border-bottom: 1px solid white;
@@ -873,16 +951,68 @@ body {
   display: flex;
 }
 
+.navbar-container {
+  display: flex;
+  flex-direction: row;
+}
+
 @media (max-width: 1100px) {
   #navbar-subcontainer .mobile-sub-container {
     flex-direction: column;
   }
+  #navbar-subcontainer .mobile-sub-container form {
+    order: 2;
+    padding: 10px 0;
+  }
+  #navbar-subcontainer .mobile-sub-container form input {
+    width: 100%;
+  }
+  #navbar-subcontainer .mobile-sub-container #nav-button {
+    display: flex;
+    justify-content: space-between;
+  }
+  #navbar-subcontainer .mobile-sub-container #nav-button .nav-button-left, #navbar-subcontainer .mobile-sub-container #nav-button .nav-button-right {
+    padding-right: 10px;
+    padding-left: 0px;
+  }
+  #navbar-subcontainer .mobile-sub-container #nav-button .nav-button-left a.nav-link, #navbar-subcontainer .mobile-sub-container #nav-button .nav-button-right a.nav-link {
+    padding: 5px 20px;
+  }
+
+  .navbar-container {
+    flex-direction: column;
+  }
 }
-.hidden {
+.hidden-nav-button {
   position: absolute;
-  z-index: -1;
+  width: 100%;
+  top: 106px;
 }
 
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  padding: 30px 15px;
+}
+.header-content .hdr h2 {
+  font-size: 52px;
+  padding-bottom: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.header-content .hdr-sub h3 {
+  font-size: 18px;
+  padding-bottom: 2px;
+}
+
+@media (max-width: 640px) {
+  .header-content .hdr h2 {
+    font-size: 32px;
+  }
+}
 .dark-footer {
   background: black;
   padding: 24px 0;
@@ -898,7 +1028,7 @@ body {
 .dark-footer .container .email-footer p, .dark-footer .container .login-footer p {
   font-size: 15px;
   font-weight: normal;
-  color: #ccc;
+  color: #444;
   padding: 0 10px;
   margin: 0;
   display: flex;
@@ -932,6 +1062,10 @@ body {
 @media (max-width: 600px) {
   .bottom-footer .logo {
     display: none;
+  }
+
+  .dark-footer .container {
+    flex-direction: column;
   }
 }
 .bottom-footer {
@@ -996,44 +1130,53 @@ body {
   color: #f98e04;
 }
 
-@font-face {
-  font-family: WfWebfont;
-  /* Гарнитура шрифта */
-  src: url(base/wwf-webfont.ttf);
-  /* Путь к файлу со шрифтом */
-}
-body {
-  font-family: "Open Sans", sans-serif;
+.circle-card-section {
+  background: #f6f5f2;
 }
 
-#header {
-  min-height: 350px;
-  position: relative;
-  /*  &:after {
-      content: "<h1>h111</h1>";
-      color: white;
-      display: block;
-      position: absolute;
-      z-index: -1;
-      width: 100%;
-      min-height: 300px;
-    }*/
+.circle-card {
+  color: #444;
+  text-align: center;
+  padding: 50px 0;
 }
-#header:before {
+.circle-card .card-title {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 40px;
+  text-transform: uppercase;
+}
+.circle-card .card-title:after, .circle-card .card-title:before {
+  background: rgba(80, 55, 55, 0.15);
   content: "";
   display: block;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  min-height: 300px;
-  background-image: url("images/background/RSwwfau_13397_web.jpg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: 100%;
+  height: 6px;
+  margin: 0 auto;
+  width: 80px;
+}
+.circle-card .intro {
+  margin: 45px 0 0;
+}
+.circle-card .intro p {
+  font-size: 15px;
+  margin: 0;
+}
+.circle-card .intro .highlight {
+  margin-bottom: 1.5em;
+  font-size: 24px;
+  line-height: 1.3;
+}
+.circle-card .circle-card-pillars {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.circle-card .circle-card-pillars .circle-card-item img {
+  border-radius: 50%;
+  margin: 0 45px;
 }
 
-#navbar-container {
-  background: url("images/background/bg-header-pattern-2d1f5ee4abb035203b0bd1cb7326ea039863ae7c3190ee41e43f4d8d9fcbf953.png") repeat;
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
 /*# sourceMappingURL=main.css.map */
