--- a/sass-boilerplate/stylesheets/pages/worldwildlife.scss
+++ b/sass-boilerplate/stylesheets/pages/worldwildlife.scss
@@ -2,7 +2,7 @@
   background: $dark-white;
 }
 
-.circle-card {
+.circle-card-homepage {
 
   color: $main-text-color;
   text-align: center;
@@ -27,7 +27,7 @@
   .intro {
     margin: 45px 0 0;
 
-    p{
+    p {
       font-size: 15px;
       margin: 0;
     }
@@ -40,16 +40,217 @@
   }
 
   .circle-card-pillars {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    // display: flex;
+    //justify-content: space-between;
+    //flex-wrap: wrap;
 
     .circle-card-item {
       img {
         border-radius: 50%;
-        margin: 0 45px;
+        // margin: 0 45px;
+      }
+
+      a h4 {
+        font-family: WfWebfont;
+        font-size: 36px;
+        text-transform: uppercase;
       }
     }
 
+  }
+
+  .food {
+    a {
+      color: #b71234;
+    }
+  }
+
+  .climate {
+    a {
+      color: #d55c19;
+    }
+  }
+
+  .fresh-water {
+    a {
+      color: #00675a;
+    }
+  }
+
+  .wildlife {
+    a {
+      color: #53284f;
+    }
+  }
+
+  .forests {
+    a {
+      color: #55601c;
+    }
+  }
+
+  .oceans {
+    a {
+      color: #006983;
+    }
+  }
+}
+
+.grid-card-section {
+  .container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .grid-card-item {
+    background: #0c5460;
+    border-radius: 10px;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+
+    .grid-card-content {
+      background: #1c7430;
+      width: 100%;
+      border-radius: 0 0 10px 10px;
+      padding: 30px;
+    }
+  }
+}
+
+
+
+.grid-card-homepage {
+  margin: 50px 0;
+  display: grid;
+  grid-template-columns: 590px 590px;
+  grid-template-rows: 480px 480px 480px;
+  grid-gap: 10px;
+  //align-items: end;
+
+  .grid-card-2, .grid-card-3, .grid-card-6 {
+    display: grid;
+    grid-template-columns: 290px 290px;
+    grid-template-rows: 480px;
+    grid-gap: 10px;
+  }
+
+
+
+  .grid-card-item.grid-card-21, .grid-card-item.grid-card-32 {
+    display: flex;
+    align-items: flex-start;
+
+    .grid-card-content {
+      border-radius: 10px 10px 0 0;
+    }
+  }
+
+  .grid-card-1 {
+    @include background-grid-card(url("images/griscardW/shutterstock_1152324746.jpg"), no-repeat, center center);
+  }
+
+  .grid-card-22 {
+    @include background-grid-card(url("images/griscardW/DRTV_homepage_polarbear.jpg"), no-repeat, center center);
+  }
+
+  .grid-card-31 {
+    @include background-grid-card(url("images/griscardW/smaller_shutterstock_112976938.jpg"), no-repeat, center center);
+  }
+  .grid-card-4 {
+    @include background-grid-card(url("images/griscardW/2020-01-ogc-valentine.jpg"), no-repeat, center center);
+  }
+  .grid-card-5 {
+    @include background-grid-card(url("images/griscardW/Medium_WW2124502.jpg"), no-repeat, center center);
+  }
+  .grid-card-61 {
+    @include background-grid-card(url("images/griscardW/Medium_WW1106019.jpg"), no-repeat, center center);
+  }
+  .grid-card-62 {
+    @include background-grid-card(url("images/griscardW/Medium_WW2120967.jpg"), no-repeat, center center);
+  }
+
+}
+
+.grid-help-card-homepage{
+  margin: 50px 0;
+  display: grid;
+  grid-template-columns: 590px 590px;
+  grid-template-rows: 480px;
+  grid-gap: 10px;
+
+  .grid-card-7 {
+    @include background-grid-card(url("images/griscardW/2018-11-20-pandanation-celebrate.jpg"), no-repeat, center center);
+
+  }
+
+  .grid-card-8 {
+    @include background-grid-card(url("images/griscardW/Small_WW164079_(1).jpg"), no-repeat, center center);
+  }
+}
+
+@media (max-width: 1200px) {
+  .grid-card-homepage {
+    grid-template-columns: 446px 446px;
+    grid-template-rows: 360px 360px 360px;
+
+    .grid-card-2, .grid-card-3, .grid-card-6 {
+      grid-template-columns: 218px 218px;
+      grid-template-rows: 360px;
+    }
+  }
+
+  .grid-help-card-homepage{
+    grid-template-columns:  446px 446px;
+    grid-template-rows: 360px;
+  }
+
+}
+
+@media (max-width: 910px) {
+  .grid-card-homepage {
+    grid-template-columns: 590px;
+    grid-template-rows: 480px 480px 480px 480px 480px;
+
+    .grid-card-2, .grid-card-3, .grid-card-6 {
+      grid-template-columns: 290px 290px;
+      grid-template-rows: 480px;
+    }
+  }
+  .grid-help-card-homepage{
+    grid-template-columns:  590px;
+    grid-template-rows: 480px 480px;
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-card-homepage {
+    grid-template-columns: 446px;
+    grid-template-rows: 360px 360px 360px 360px 360px;
+
+    .grid-card-2, .grid-card-3, .grid-card-6 {
+      grid-template-columns: 218px 218px;
+      grid-template-rows: 360px;
+    }
+  }
+  .grid-help-card-homepage{
+    grid-template-columns:  446px;
+    grid-template-rows: 360px 360px;
+  }
+}
+
+@media (max-width: 455px) {
+  .grid-card-homepage {
+    grid-template-columns: 310px;
+    grid-template-rows: 252px 252px 252px 252px 252px;
+
+    .grid-card-2, .grid-card-3, .grid-card-6 {
+      grid-template-columns: 150px 150px;
+      grid-template-rows: 248px;
+    }
+  }
+  .grid-help-card-homepage{
+    grid-template-columns:  310px;
+    grid-template-rows: 252px 252px;
   }
 }
