--- a/sass-boilerplate/stylesheets/abstracts/mixins.scss
+++ b/sass-boilerplate/stylesheets/abstracts/mixins.scss
@@ -8,5 +8,30 @@
   background-image: $background-image;
   background-repeat: $background-repeat;
   background-position: $background-position;
-  background-size: cover;
+  background-size: 100%;
+  transition: background-size 0.25s ;
+}
+
+@mixin gradientAnimation( $main, $start, $end, $transTime ){
+  background-size: 100%;
+  background-image: linear-gradient($main, $main);
+  position: relative;
+  z-index: 100;
+  &:before {
+    background-image: linear-gradient($end, $start);
+    content: "";
+    display: block;
+    height: 100%;
+    position: absolute;
+    top: 0; left: 0;
+    opacity: 0;
+    width: 100%;
+    z-index: -100;
+    transition: opacity $transTime;
+  }
+  &:hover {
+    &:before {
+      opacity: 1;
+    }
+  }
 }
